--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+:root {
+  --main-bg-color: #444757;
+  --scnd-bg-color: #1E1F26;
+  --phone-bg-color: #dfe4ea;
+  --phone-width: 300px;
+  --phone-ratio: 2;
+  --phone-height: calc(var(--phone-width) * var(--phone-ratio));
+}
+
+* {
+  box-sizing: border-box
+}
